--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "coinbase-commerce-node": "^1.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "email-validator": "^2.0.4",
